--- a/public/css/style-desktop.css
+++ b/public/css/style-desktop.css
@@ -13,14 +13,14 @@
 		padding: 5em 0em;
 	}
 
-		.homepage #header
-		{
-			padding: 10em 0em;
-		}
+    .homepage #header
+    {
+        padding: 10em 0em;
+    }
 
-		#header .container
-		{
-		}
+    #header .container
+    {
+    }
 
 /*********************************************************************************/
 /* Logo                                                                          */
@@ -42,7 +42,7 @@
 			letter-spacing: 1px;
 			text-decoration: none;
 			text-transform: uppercase;
-			font-size: 4em;
+			font-size: 1.5em;
 			font-weight: 900;
 			color: #ffffff;
 		}
@@ -143,7 +143,7 @@
 /*********************************************************************************/
 
 	#content {
-		padding: 0px 0px 0px 0px;
+		/* padding: 0px 0px 0px 0px; */
 	}
 
 	.twocolumn2 #content {
