--- a/public/css/style-desktop.css
+++ b/public/css/style-desktop.css
@@ -134,7 +134,7 @@
 /* Page Wrapper                                                                  */
 /*********************************************************************************/
 
-	.homepage #page {
+	.homepage .page {
         padding: 5em 0em;
         background: #FFF;
         min-height: calc(100vh - 260px);
