blue + orange theme

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,7 +32,7 @@
 	}
 
 	a {
-		color: #D1551F;
+		color: #ab7442;
 	}
 
 	strong {
@@ -717,7 +717,7 @@ ul.style3 .first {
 	{
 		position: relative;
         text-align: center;
-        background: #f3f2ed;
+        background: #0c1017;
 
         /* position: fixed; */
         /* height: 50px; */
