--- a/public/css/style.css
+++ b/public/css/style.css
@@ -85,12 +85,6 @@
 					width: auto;
 				}
 
-
-	header
-	{
-		margin-bottom: 2.5em;
-	}
-
 	header h2
 	{
 		letter-spacing: -2px;
@@ -542,10 +536,15 @@ ul.style1 {
 }
 
 ul.style1 li {
-	display: inline-block;
+    display: inline-block;
+	/* border-top: 1px solid #E6E6E6; */
 	padding: 1em 0em;
-	border-top: 1px solid #E6E6E6;
 	line-height: 160%;
+}
+
+ul.style1 div {
+	border-top: 1px solid #E6E6E6;
+
 }
 
 ul.style1 span
