added auth + fixed bootstrap

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -683,7 +683,7 @@ ul.style3 .first {
 
 	.page {
 		padding: 1em 0 3em 0;
-        background: #FFF;
+        background: #f8fafc;
         min-height: calc(100vh - 352px);
 	}
 
