--- a/public/css/style-desktop.css
+++ b/public/css/style-desktop.css
@@ -10,7 +10,7 @@
 
 	#header
 	{
-		padding: 5em 0em;
+        padding: 5em 0em;
 	}
 
     .homepage #header
@@ -136,7 +136,7 @@
 
 	.homepage .page {
         padding: 5em 0em;
-        background: #FFF;
+        background: #f8fafc;
         min-height: calc(100vh - 260px);
 		overflow: hidden;
 	}
